# how-bazel

./: README.md  WORKSPACE
whisper/: BUILD.bazel  README.md  go.mod  greeter.go  greeter_test.go  main.go
